🐛 Fix issue with alignment of logo

--- a/css/header-style.css
+++ b/css/header-style.css
@@ -42,8 +42,8 @@ div:has(.anchor) {
 li {
   list-style: none;
 }
+
 .header {
-<<<<<<< HEAD
   position: sticky;
   top: 0;
   height: 60px;
@@ -55,19 +55,17 @@ li {
 
 #navbar {
   transition: 0.5s ease;
-=======
-    position: fixed;
-    top: 0;
-    height: 60px;
-    width: 100%;
-    background-color: #ffffff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-    z-index: 999;
+  position: fixed;
+  top: 0;
+  height: 60px;
+  width: 100%;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+  z-index: 999;
 }
 
 #navbar {
-    transition: 0.15s ease;
->>>>>>> 3c4abe0636d7368d84364c53bd149f33d938d58c
+  transition: 0.15s ease;
 }
 
 .upper-wrapper {
@@ -80,20 +78,17 @@ li {
 }
 
 .nav {
-<<<<<<< HEAD
   width: 100%;
   position: fixed;
   transform: translateY(1000px);
   background-color: var(--clr-pdark);
   transform-origin: left;
-=======
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    opacity: 0;
-    background-color: var(--clr-pdark);
-    transform-origin: left;
->>>>>>> 3c4abe0636d7368d84364c53bd149f33d938d58c
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  opacity: 0;
+  background-color: var(--clr-pdark);
+  transform-origin: left;
 }
 
 .dfo {
@@ -101,7 +96,6 @@ li {
 }
 
 .nav-active {
-<<<<<<< HEAD
   transform-origin: left;
   transform: translateY(0);
 }
@@ -113,31 +107,29 @@ li {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-=======
-    animation: showNav .2s;
-    display: block;
-    opacity: 1;
+  animation: showNav .2s;
+  display: block;
+  opacity: 1;
 }
 
 @keyframes showNav {
-    from {
-        opacity: 0;
-    }
+  from {
+    opacity: 0;
+  }
 
-    to {
-        opacity: 1;
-    }
+  to {
+    opacity: 1;
+  }
 }
 
 .nav ul {
-    padding-left: 0;
-    width: 100%;
-    height: 94vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
->>>>>>> 3c4abe0636d7368d84364c53bd149f33d938d58c
+  padding-left: 0;
+  width: 100%;
+  height: 94vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .nav .socials {
@@ -217,13 +209,10 @@ li {
 }
 
 .ham-active .line2 {
-<<<<<<< HEAD
   transform: translateX(10vh);
   transition: transform 0.2s ease;
-=======
-    transform: translateX(50vh);
-    transition: transform 0.2s ease;
->>>>>>> 3c4abe0636d7368d84364c53bd149f33d938d58c
+  transform: translateX(50vh);
+  transition: transform 0.2s ease;
 }
 
 .ham-active .line3 {
@@ -233,22 +222,19 @@ li {
 }
 
 .line {
-<<<<<<< HEAD
   background-color: var(--clr-pdark);
   height: 3px;
   width: 25px;
   transition: transform 0.4s ease;
   transform-origin: left;
-=======
-    background-color: var(--clr-pdark);
-    height: 3px;
-    width: 25px;
-    transition: transform 0.2s ease;
-    transform-origin: left;
->>>>>>> 3c4abe0636d7368d84364c53bd149f33d938d58c
+  background-color: var(--clr-pdark);
+  height: 3px;
+  width: 25px;
+  transition: transform 0.2s ease;
+  transform-origin: left;
 }
 
-.line + .line {
+.line+.line {
   margin-top: 6px;
 }
 
@@ -261,13 +247,10 @@ li {
 }
 
 #drgn-accountname-icon {
-<<<<<<< HEAD
   margin-left: 10px;
   display: none;
-=======
-    margin-left: 10px;
-    display: inline-block;
->>>>>>> 3c4abe0636d7368d84364c53bd149f33d938d58c
+  margin-left: 10px;
+  display: inline-block;
 }
 
 /* .dropdown-account {
@@ -326,7 +309,6 @@ li {
 }
 
 @keyframes reveal {
-<<<<<<< HEAD
   0% {
     transform: scale(0);
   }
@@ -340,36 +322,37 @@ li {
   .nav {
     transition: 0.4s ease;
   }
-=======
+
+  @keyframes reveal {
     0% {
-        transform: scale(0.75);
-        opacity: 0;
+      transform: scale(0.75);
+      opacity: 0;
     }
 
     100% {
-        transform: scale(1);
-        opacity: 1;
+      transform: scale(1);
+      opacity: 1;
     }
+  }
 }
 
 @media (max-width: 870px) {
-    .nav {
-        width: 75%;
-        position: fixed;
-        top: 0;
-    }
+  .nav {
+    width: 75%;
+    position: fixed;
+    top: 0;
+  }
 
-    .drgn-information {
-        font-size: 1.1rem;
-    }
+  .drgn-information {
+    font-size: 1.1rem;
+  }
 }
 
 @media (max-width: 640px) {
-    .nav {
-        transition: 0.4s ease;
-        width: 100% !important;
-    }
->>>>>>> 3c4abe0636d7368d84364c53bd149f33d938d58c
+  .nav {
+    transition: 0.4s ease;
+    width: 100% !important;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -380,6 +363,7 @@ li {
 }
 
 @media (min-width: 640px) {
+
   .header,
   .upper-wrapper {
     height: 80px;
@@ -388,7 +372,8 @@ li {
   }
 
   .upper-wrapper {
-    width: 40%;
+    width: 150px;
+    overflow: visible;
     z-index: 9999;
   }
 
@@ -460,18 +445,16 @@ li {
   }
 }
 
-<<<<<<< HEAD
 @media (min-width: 1250px) {
   .header {
     position: sticky;
     top: 0;
   }
-=======
-    .header {
-        position: fixed;
-        top: 0;
-    }
->>>>>>> 3c4abe0636d7368d84364c53bd149f33d938d58c
+
+  header {
+    position: fixed;
+    top: 0;
+  }
 
   .nav li {
     font-size: 1.2rem;
@@ -488,9 +471,15 @@ li {
     justify-content: space-between;
     align-items: center;
   }
+
   .nav {
     position: absolute;
     right: 20%;
+  }
+
+  .logo {
+    position: absolute;
+    left: 20%;
   }
 }
 
